--- a/src/main/resources/templates/node-detail.html
+++ b/src/main/resources/templates/node-detail.html
@@ -64,8 +64,11 @@
                                         <div class="modal-dialog modal-dialog-centered">
                                             <div class="modal-content">
                                                 <div class="modal-header">
-                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">정말 삭제하시겠습니까?</h1>
+                                                    <h1 class="modal-title fs-5" id="exampleModalLabel">지점 삭제</h1>
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    정말 삭제하시겠습니까?
                                                 </div>
                                                 <div class="modal-footer">
                                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
