--- a/src/main/resources/templates/user-detail.html
+++ b/src/main/resources/templates/user-detail.html
@@ -19,98 +19,83 @@
                     사용자 상세조회
                 </div>
                 <div class="row text-center mx-5 rounded">
+                    <form th:object="${userForm}" th:action="@{/admin/users/update}" method="post">
                     <div class="row align-items-center">
                         <div class="col-3 offset-9 text-end">
                             <button type="submit" class="fs-5 mt-3 btn btn-primary update fontHv">사용자 수정</button>
-                            <button type="submit" class="fs-5 mt-3 btn btn-primary delete fontHv">사용자 삭제</button>
+                            <a th:href="@{'/admin/users/delete/'+${userForm.getUsername()}}" class="fs-5 mt-3 btn btn-primary delete fontHv">사용자 삭제</a>
                         </div>
                     </div>
                     <div class="col text-start ms-5 ps-5">
-                        <form th:object="${userForm}" th:action="@{/admin/users/update}" method="post">
                             <div class="row mt-3">
-                                <div class="col-6">
+                                <div class="col-2">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">ID</p>
                                         <hr>
-                                        <input type="text" th:field="*{username}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput1" placeholder="name@example.com">
+                                        <input type="text" th:field="*{username}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput1" style="color:black" placeholder="name@example.com" readonly>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-2">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">성별</p>
                                         <hr>
-                                        <input type="text" th:field="*{userGender}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput2" placeholder="name@example.com">
+                                        <select th:field="*{userGender}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput2" style="color : rgb(17,160,248); border-radius : 1rem;">
+                                            <option th:each="g : ${gender}" th:value="${g}" th:text="${g}" th:selected="${g == userForm.getUserGender()}"></option>
+                                        </select>
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-2">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">지정 속도</p>
                                         <hr>
-                                        <input type="text" th:field="*{userSpeed}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput3" placeholder="name@example.com">
+                                        <select th:field="*{userSpeed}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput3" style="color : rgb(17,160,248); border-radius : 1rem;">
+                                            <option th:each="s : ${speed}" th:value="${s}" th:text="${s}" th:selected="${s == userForm.getUserSpeed()}"></option>
+                                        </select>
                                     </div>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col">
+                                <div class="col-3">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">닉네임</p>
                                         <hr>
-                                        <input type="text" th:field="*{userNickname}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput4" placeholder="name@example.com">
+                                        <input type="text" th:field="*{userNickname}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput4" placeholder="name@example.com">
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-3">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">출생년도</p>
                                         <hr>
-                                        <input type="text" th:field="*{userBirth}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput5" placeholder="name@example.com">
+                                        <input type="text" th:field="*{userBirth}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput5" placeholder="name@example.com">
                                     </div>
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-6">
-                                    <div class="form-floating mb-3">
-                                        <p class="fs-4 nodeHeader">학과</p>
-                                        <hr>
-                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput6" placeholder="name@example.com">
-                                    </div>
-                                </div>
-                                <div class="col">
+                                <div class="col-3">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">키</p>
                                         <hr>
-                                        <input type="text" th:field="*{userHeight}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput7" placeholder="name@example.com">
+                                        <input type="text" th:field="*{userHeight}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput7" placeholder="name@example.com">
                                     </div>
                                 </div>
-                                <div class="col">
+                                <div class="col-3">
                                     <div class="form-floating mb-3">
                                         <p class="fs-4 nodeHeader">몸무게</p>
                                         <hr>
-                                        <input type="text" th:field="*{userWeight}" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput8" placeholder="name@example.com">
+                                        <input type="text" th:field="*{userWeight}" class="form-control fontHv mt-0 pt-0 fs-6" id="floatingInput8" placeholder="name@example.com">
                                     </div>
                                 </div>
                             </div>
-                            <div class="row mt-3">
-                                <div class="col">
-                                    <div class="form-floating mb-3">
-                                        <p class="fs-4 nodeHeader">추천경로 만족도</p>
-                                        <hr>
-                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput9" placeholder="name@example.com">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="form-floating mb-3">
-                                        <p class="fs-4 nodeHeader">소요시간 만족도</p>
-                                        <hr>
-                                        <input type="text" class="form-control fontHv mt-0 pt-0 fs-4" id="floatingInput10" placeholder="name@example.com">
-                                    </div>
-                                </div>
-                            </div>
-                        </form>
                     </div>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script>
+    let adminList = [[${adminList}]];
+    adminList.
+</script>
 </body>
 </html>
