--- a/src/main/resources/templates/user-manage.html
+++ b/src/main/resources/templates/user-manage.html
@@ -100,15 +100,19 @@
                                     <th scope="col">닉네임</th>
                                     <th scope="col">성별</th>
                                     <th scope="col">출생년도</th>
+                                    <th scope="col">키</th>
+                                    <th scope="col">몸무게</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="user : ${userList}" th:onclick="|location.href='@{/admin/users/{id}(id=${user.getUsername()})}'|">
-                                    <td th:text="${user.getUsername()}">Mark</td>
-                                    <td th:text="${user.getUserNickname()}">Otto</td>
-                                    <td th:text="${user.getUserGender()}">@mdo</td>
-                                    <td th:text="${user.getUserBirth()}">@mdo</td>
-                                </tr>
+                                    <tr th:each="user : ${userList}" th:onclick="|location.href='@{/admin/users/{id}(id=${user.getUsername()})}'|">
+                                        <td th:text="${user.getUsername()}">Mark</td>
+                                        <td th:text="${user.getUserNickname()}">Otto</td>
+                                        <td th:text="${user.getUserGender()}">@mdo</td>
+                                        <td th:text="${user.getUserBirth()}">@mdo</td>
+                                        <td th:text="${user.getUserHeight()}">@mdo</td>
+                                        <td th:text="${user.getUserWeight()}">@mdo</td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
