우선 뷰를 다 만들었음. CSS는 수정해야할 것이 많음

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -235,3 +235,8 @@ a{
     text-decoration : none;
     color : black;
 }
+
+input[type=file] {
+    border : 0.1rem solid grey;
+    width : 20rem;
+}
