--- a/src/main/resources/templates/fragment.html
+++ b/src/main/resources/templates/fragment.html
@@ -62,7 +62,7 @@
             <div class="col-3 ms-4 mt-1 ps-3">
                 <i class="bi bi-cpu-fill fs-4"></i>
             </div>
-            <div class="col-6 fs-5 mt-1 text-start ps-5 ms-2 sidebarItem">
+            <div class="col-6 fs-5 mt-1 text-start ps-4 ms-2 sidebarItem">
                 AI 관리
             </div>
         </a>
@@ -106,15 +106,17 @@
                 로그 관리
             </div>
         </a>
-        <div class="row mt-5 pt-5">
-            <p class="text-break text-secondary fs-6 sidebarItem">
-                Copyright@2024 가천대학교 F2Z. <br>All rights reserved.
-            </p>
+        <div class="row mt-5 pt-5 align-items-end">
+            <div class="col">
+                <p class="text-break text-secondary fs-6 sidebarItem">
+                    Copyright@2024 가천대학교 F2Z. <br>All rights reserved.
+                </p>
+            </div>
         </div>
     </div>
     <header th:fragment="header" class="row text-center pb-1" style="background-color: white; width:100%; height:7%; position:fixed; z-index:1100; margin-top:0; padding-top:0">
         <div class="col-2 ms-0">
-            <img src="/image/Gach_homepage_main.png" width="330rem" style="margin-right : 5%;" alt="경로 오류 발생">
+            <img src="/image/Gach_homepage_main.png" width="280rem" style="margin-right : 15%;" alt="경로 오류 발생">
         </div>
         <div class="col-2 mt-4">
             <div class="search">
